--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.lordicon.com/lordicon-1.1.0.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./assests/profile-pic (1).png" type="image/x-icon">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f448c1038a.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
@@ -18,7 +19,8 @@
 </head>
 
 <body class="bg-light">
-    <nav class="navbar navbar-expand-lg navbar-white bg-white shadow-sm">
+
+    <nav class="navbar navbar-expand-lg navbar-white bg-white shadow-sm px-2 px-md-0">
         <div class="container-fluid">
             <a class="navbar-brand fs-3 fw-bold" href="/"><i
                     class="fa-solid fa-t text-primary fs-2 fw-bolder"></i>o-Do-List</a>
@@ -51,8 +53,9 @@
             </div>
         </div>
     </nav>
-    <div class="container mt-5">
-        <div id="alert" class="container d-none rounded-5 w-25 mt-5 z-2 shadow-sm alert alert-success fixed-top fw-bold"
+    <div class="container mt-5 px-3 px-md-0">
+        <div id="alert"
+            class="container d-none rounded-5 w-50 mt-5 z-2 fs-sm-5 shadow-sm alert alert-success fixed-top fw-bold"
             role="alert">
             A simple success alert—check it out!
         </div>
@@ -91,43 +94,43 @@
                 </lord-icon>
             </div>
             <div class="table-responsive">
-            <table class="table mt-5">
+                <table class="table mt-5">
 
-                <thead>
-                    <tr>
-                        <th scope="col">No</th>
-                        <th scope="col">Title</th>
-                        <th scope="col">Description</th>
-                        <th scope="col">Edit</th>
-                        <th scope="col">Remove</th>
-                    </tr>
-                </thead>
+                    <thead>
+                        <tr>
+                            <th scope="col">No</th>
+                            <th scope="col">Title</th>
+                            <th scope="col">Description</th>
+                            <th scope="col">Edit</th>
+                            <th scope="col">Remove</th>
+                        </tr>
+                    </thead>
 
 
-                <tbody id="tbody">
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Your Title Here</td>
-                        <td>Your Description Here</td>
-                        <td>
-                            <button type="button" class="btn-sm btn" data-toggle="modal" data-target="#editModal">
-                                <lord-icon src="https://cdn.lordicon.com/oqyaxvft.json" trigger="hover"
-                                    style="width: 40px; height: 40px">
-                                </lord-icon>
-                            </button>
-                        </td>
-                        <td>
-                            <button class="btn btn-sm" id="delete">
-                                <lord-icon src="https://cdn.lordicon.com/wzxoqler.json" trigger="hover"
-                                    style="width: 40px; height: 40px">
-                                </lord-icon>
-                            </button>
-                        </td>
-                    </tr>
-                </tbody>
+                    <tbody id="tbody">
+                        <tr>
+                            <th scope="row">1</th>
+                            <td>Your Title Here</td>
+                            <td>Your Description Here</td>
+                            <td>
+                                <button type="button" class="btn-sm btn" data-toggle="modal" data-target="#editModal">
+                                    <lord-icon src="https://cdn.lordicon.com/oqyaxvft.json" trigger="hover"
+                                        style="width: 40px; height: 40px">
+                                    </lord-icon>
+                                </button>
+                            </td>
+                            <td>
+                                <button class="btn btn-sm" id="delete">
+                                    <lord-icon src="https://cdn.lordicon.com/wzxoqler.json" trigger="hover"
+                                        style="width: 40px; height: 40px">
+                                    </lord-icon>
+                                </button>
+                            </td>
+                        </tr>
+                    </tbody>
 
-            </table>
-        </div>
+                </table>
+            </div>
         </div>
         <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModalLabel"
             aria-hidden="true">
@@ -166,7 +169,7 @@
         </div>
     </div>
     <script src="index.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
